<resources>
    <string name="app_name">first</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="btn">start to transfer</string>
    <string name="textshow">transresult</string>
    <string name="inputhint">please_input_termperature</string>
    <string name="hello">Hello</string>
    <string name="inputrmb">Input RMB</string>
    <string name="dollar">DOLLAR</string>
    <string name="euro">EURO</string>
    <string name="won">WON</string>
    <string name="courtcounter">CourtCount</string>
    <string name="team_b">Team B</string>
    <string name="zero">0</string>
    <string name="team_a">Team A</string>
    <string name="point1">+1 Point</string>
    <string name="point2">+2 Point</string>
    <string name="point3">+3 Point</string>
    <string name="reset">Reset</string>
    <string name="exchangesrate">Exchange Rate</string>
    <string name="modifyexchange">modify</string>
    <string name="save">SAVE</string>
    <string name="unknown">unknown</string>
    <string name="config">config</string>
    <string name="input">Input</string>
    <string name="title_activity_rate_compute">rateComputeActivity</string>
    <string name="no_data">NO DATA</string>
</resources>