<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ExchangeActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#c0c0c0"
        android:text="@string/hello"
        android:textColor="#FFFFFF"
        android:textSize="50dp" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/inputrmb"
        android:inputType="numberDecimal"
        android:textSize="20dp"
        tools:inputType="number" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/hello"
        android:textSize="50dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="10dp"
        android:background="#FFFF9800"
        android:backgroundTint="#FFFF9800"
        android:onClick="onClick"
        android:text="@string/dollar"
        android:textColor="#FF000000"
        android:textSize="20dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="10dp"
        android:background="#FFFF9800"
        android:backgroundTint="#FFFF9800"
        android:onClick="onClick"
        android:text="@string/euro"
        android:textColor="#FF000000"
        android:textSize="20dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="10dp"
        android:background="#FFFF9800"
        android:backgroundTint="#FFFF9800"
        android:onClick="onClick"
        android:text="@string/won"
        android:textColor="#FF000000"
        android:textSize="20dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="10dp"
        android:background="#FFFF9800"
        android:backgroundTint="#FFFF9800"
        android:onClick="openOne"
        android:text="@string/modifyexchange"
        android:textColor="#FF000000"
        android:textSize="20dp" />
</LinearLayout>