<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="1dp"
    tools:context=".TemperatureConversionActivity">

    <TextView
        android:id="@+id/textView3_tc"
        android:layout_width="match_parent"
        android:layout_height="39dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:background="#673AB7"
        android:text="@string/hello"
        android:textColor="#FFFFFF"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/editTextTextPersonName2_tc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:ems="10"
        android:hint="@string/inputhint"
        android:inputType="number"
        android:autofillHints="" />

    <Button
        android:id="@+id/button3_tc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:text="@string/btn"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView4_tc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:text="@string/textshow"
        android:textSize="40sp" />
</LinearLayout>