<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="550dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="205dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/team_a"
                tools:gravity="center" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:hint="@string/zero"
                android:textSize="50dp" />

            <Button
                android:id="@+id/btn_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="24dp"
                android:backgroundTint="#bababa"
                android:onClick="onClick_1"
                android:text="@string/point1"
                android:textSize="18dp" />

            <Button
                android:id="@+id/btn_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="#bababa"
                android:onClick="onClick_2"
                android:text="@string/point2"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="#bababa"
                android:onClick="onClick_3"
                android:text="@string/point3"
                android:textSize="18dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:backgroundTint="#673AB7" />

        <LinearLayout
            android:layout_width="205dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/team_b"
                tools:gravity="center" />

            <TextView
                android:id="@+id/textview3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:hint="@string/zero"
                android:textSize="50dp" />

            <Button
                android:id="@+id/btn_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="24dp"
                android:backgroundTint="#bababa"
                android:onClick="onClick_4"
                android:text="@string/point1"
                android:textSize="18dp" />

            <Button
                android:id="@+id/btn_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="#bababa"
                android:onClick="onClick_5"
                android:text="@string/point2"
                android:textSize="18dp" />

            <Button
                android:id="@+id/btn_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="#bababa"
                android:onClick="onClick_6"
                android:text="@string/point3"
                android:textSize="18dp" />


        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_7"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#808A87"
        android:onClick="onClick_7"
        android:text="@string/reset"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>